fixed user generated boxes overflowing grid container by setting flex growth and shrink values to 0, and setting flexbasis value to percentage of of grid size, as defined by user input

--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@
     border: 1px black;
 }
 
+/*.new-box {
+    display:flex;
+    flex-wrap: wrap;
+    border-style: solid 1px;
+    border-color: black;
+}
